--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
 <!--[if gt IE 8]><!--> <html> <!--<![endif]-->
 <head>
   <title>Plataform</title>
+  <link href='http://fonts.googleapis.com/css?family=Revalia' rel='stylesheet' type='text/css'>
   <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+  <!--<p>pruebas de texto</p>-->
   <div id="plataform"></div>
+
+
   <script src="js/phaser.js"></script>
   <script src="js/game.js"></script>
 
