--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
 </head>
 <body>
   <!--<p>pruebas de texto</p>-->
+  <div>
+  	
+  </div>
   <div id="plataform"></div>
 
-
+	
+  
+  <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
   <script src="js/phaser.js"></script>
   <script src="js/game.js"></script>
 
